# OrbitalDuo

./: .gitignore  Cargo.toml  config.json  config_p1.json  config_p2.json  runmp.bat
orbital_client/: Cargo.toml
orbital_client/src/: audio.rs  config.rs  main.rs  network.rs  types.rs
orbital_client/src/gameplay/: game_state.rs  map.rs  mod.rs
orbital_client/src/graphics/: renderer.rs  ui.rs  window.rs
orbital_client/src/graphics/shaders/: font_rendering.fs.glsl  shape_rendering.fs.glsl  shape_rendering.vs.glsl  sprite_rendering.fs.glsl
orbital_server/: Cargo.toml
orbital_server/src/: main.rs
orbital_shared/: Cargo.toml
orbital_shared/src/: lib.rs
